@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<PreferenceCategory android:key="prefKeyBasics"
-		android:title="@string/prefBasics">
+		android:title="@string/prefBasics"><CheckBoxPreference android:summaryOn="@string/prefEnableProfilesOn" android:key="prefKeyEnableProfiles" android:defaultValue="true" android:summaryOff="@string/prefEnableProfilesOff" android:title="@string/prefEnableCputuner"></CheckBoxPreference>
 		<PreferenceScreen android:key="prefKeyGuiScreen"
 			android:title="@string/prefCatGUI">
 
@@ -39,9 +39,7 @@
 		</PreferenceScreen>
 		<PreferenceScreen android:key="prefKeyProfiles"
 			android:title="@string/prefKeyProfiles">
-			<CheckBoxPreference android:title="@string/prefEnableProfiles"
-				android:summaryOn="@string/prefEnableProfilesOn" android:key="prefKeyEnableProfiles"
-				android:defaultValue="true" android:summaryOff="@string/prefEnableProfilesOff"></CheckBoxPreference>
+			
 			<CheckBoxPreference android:title="@string/prefCallInProgressProfile"
 				android:key="prefKeyCallInProgressProfile" android:summary="@string/prefCallInProgressProfileLong"
 				android:enabled="true" android:defaultValue="true"></CheckBoxPreference>
@@ -63,7 +61,7 @@
 					android:title="@string/prefConfigurationsAutoLoad"></PreferenceScreen>
 			</PreferenceCategory>
 			<PreferenceCategory android:key="prefkeyConfigurationsSettings" android:title="@string/prefConfigurationsSettings">
-				<CheckBoxPreference android:title="@string/prefSaveConfigOnSwitch" android:key="prefKeySaveConfigOnSwitch" android:summary="@string/prefSaveConfigOnSwitchFull" android:defaultValue="false" android:enabled="false"></CheckBoxPreference>
+				<CheckBoxPreference android:title="@string/prefSaveConfigOnSwitch" android:key="prefKeySaveConfigOnSwitch" android:summary="@string/prefSaveConfigOnSwitchFull" android:defaultValue="true"></CheckBoxPreference>
 			</PreferenceCategory>
 		</PreferenceScreen>
 
